# pediatric_cancer_atlas_analysis

2.metrics_ablation_analysis/: 2.1.generate_ablations.py  2.2.eval_metrics.ipynb  2.2.eval_metrics.py  2.3.metrics_analysis.ipynb  2.3.metrics_analysis.py  2.4a.make_better_metric_plots.R  2.4a.make_better_metric_plots.ipynb  2.4a.make_better_metric_plots.r  2.4b.select_example_ablations.py  2.4c.assemble_figures.R  2.4c.assemble_figures.ipynb  2.4c.assemble_figures.r  config.yml.template  plot_env.yml  pyproject.toml  pytest.ini
2.metrics_ablation_analysis/plots/figures/: blur_ablation_analysis_and_eg.captions.md  combined_ablation_panels.captions.md
2.metrics_ablation_analysis/results/: boot_res_all_conf8000_nest_cell_line.parquet  boot_res_all_conf8000_nest_cell_line_pool_plate.csv  boot_res_all_conf8000_nest_cell_line_pool_plate.parquet  boot_res_plate1_u2os_nest_confluence.csv  boot_res_plate1_u2os_nest_confluence.parquet  boot_res_plate2_u2os_nest_confluence.csv  boot_res_plate2_u2os_nest_confluence.parquet  boot_res_u2os_conf8000_nest_plate.csv  boot_res_u2os_conf8000_nest_plate.parquet
2.metrics_ablation_analysis/src/image_ablation_analysis/: ablation_explorer.py  ablation_runner.py  indexing.py  nb_utils.py  sweeps.py  utils.py
2.metrics_ablation_analysis/tests/: conftest.py  test_indexing.py  test_nested_regression.py  test_parquet_index.py  test_runner_output.py
2.metrics_ablation_analysis/tests/hooks/: conftest.py  test_albumentations_backend.py  test_generic_hook.py  test_generic_hook_utils.py  test_normalization.py
(+28 files in other folders)
